src/jvmMain/sass/main.scss
/* ... */
.slider {
  width: 100%;
  height: 25px;

  .track {
    background: $gray-300;
    border-radius: 35px;
    height: 6px;
    top: 50%;
    margin-top: -3px;
  }
  .thumb {
    height: 14px;
    width: 14px;
    background: $blue;
    border-radius: 50%;
    cursor: grab;
    margin-top: 5px;
  }
  .track-1 {
    background: $cyan;
  }
}

a.list-group-item {
  text-decoration: none;
  color: $body-color;
}

li.list-group-item:hover, a.list-group-item:hover {
  background: rgba($blue, 0.5);
  text-decoration: none;
  color: $body-color;
}

.bg-pink {
  color: $body-color;
  background-color: $pink;
}

.diffs .badge-success {
  background-color: #00a279;
}

.timeline .card-header h3 {
  margin: 0;
}

.timeline .card-header small {
  color: #bbb;
}

.rabbit-dialog {
  max-width: 800px !important;

  iframe {
    height: 467px;
  }
}

.modal.show {
  display: block;
}

div.mapstats {
  margin: 1rem 0 1.5rem;
}

.mapstats .list-group-item {
  padding: 5px 0 5px 13px;
  line-height: 42px;
}

.mapstats .list-group-item > img {
  margin: 14px 5px 0 0;
}

.list-group {
  .color {
    height: 10px;
    background-color: $gray-700;

    &:first-child {
      border-top-left-radius: inherit;
      border-top-right-radius: inherit;
    }
  }

  &.curated {
    .color {
      background-color: $success;
    }
  }
  &.ranked {
    .color {
      background-color: $warning;
    }
  }
  &.qualified {
    .color {
      background-color: $info;
    }
  }
  &.verified {
    .color {
      background-color: $bs-purple;
    }
  }
  &.ranked, &.qualified {
    &.curated {
      .color {
        background-image: linear-gradient(90deg, $success, transparent);
      }
    }
  }
}

.mapstats .stats {
  width: 239px;
  line-height: normal;
  margin-left: auto;
}

.mapstats span {
  font-size: 10px;
  float: left;
  width: 59px;
  padding: 3px 0 0;
}

.mapstats img, .mapstats .diff-stars i {
  margin-right: 3px;
}

.list-group-item.stat-hard { background: rgba($orange, 0.1); }
.list-group-item.stat-expert { background: rgba($red, 0.1); }
.list-group-item.stat-blue { background: rgba($cyan, 0.1); }
.list-group-item.stat-green { background: rgba($green, 0.1); }
.list-group-item.stat-purple { background: rgba($purple, 0.1); }

.nav-tabs {
  position: absolute;
  bottom: 0;
  right: 15px;
}

.nav-minimal {
  border-bottom: 1px solid $table-group-separator-color;

  li > .nav-link {
    padding: .5rem 1rem;
    margin: 0 1rem;
    color: #888;
    border-bottom: 3px solid transparent;
    transition: border-bottom-color 0.2s, color 0.2s;

    &.active {
      color: #fff;
      border-bottom-color: #fff;
    }
  }
}

.user-info {
  height: 100%;

  .card-body {
    display: flex;
    flex-direction: column;

    > :last-child:not(:only-child) {
      margin: auto 0 0 0;
    }

    .btn-group {
      margin-right: 5px;

      .btn:first-child i {
        margin-right: 5px;
      }

      .btn:last-child {
        padding: 0.375rem 0.5rem;
      }
    }

    .difficulty-spread {
      display: flex;
      width: 100%;
      height: 10px;
      border-radius: 2.5px;
      overflow: hidden;
    }

    .legend {
      display: flex;
      justify-content: space-between;
    }

    td {
      vertical-align: middle;
      border-bottom-width: 0;
    }
  }
}

.authorize-avatar {
  width: 3em;
  margin: 0.5em;
}
.scopes {
  margin: 1em 1em 0 1em;

  .scope {
    margin-top: 0.5em;
  }
}

.DayPickerKeyboardShortcuts_panel {
  color: #000;
}
.DayPicker .presets {
  padding: 0 22px 6px 22px;
}
.DayPicker .presets button {
  margin-bottom: 5px;
  position: relative;
  height: 100%;
  text-align: center;
  border: 2px solid #00a279;
  color: #00a279;
  padding: 2px 10px;
  margin-right: 8px;
  font-weight: 700;
  background: none;
  font-size: 14px;
}
.DayPicker .presets button:hover {
  background: #00a279;
  color: #fff;
}
.DateRangePicker {
  left: 50%;
  transform: translate(-50%, 0);
  z-index: 10;
}
.DateRangePicker_picker, .DayPicker, .CalendarMonth, .CalendarDay:not(.CalendarDay__selected):not(.CalendarDay__selected_span):not(.CalendarDay__hovered_span),
.CalendarMonthGrid, .DayPickerNavigation_button__default {
  background: #222 !important;
  color: #b8b7b7 !important;
}
.DateRangePicker_picker {
  border: 2px solid #ddd;
}
.DayPickerNavigation_svg__horizontal {
  fill: #ddd !important;
  height: 16px !important;
  width: 16px !important;
}
.CalendarDay__selected_span {
  background: #34726d !important;
}
.CalendarMonth_caption {
  color: #b8b7b7 !important;
}
.KeyboardShortcutRow_keyContainer {
  display: inline-block;
}
.KeyboardShortcutRow_action {
  display: inline;
}
.KeyboardShortcutRow_keyContainer {
  background: #DDD;
  padding: 5px 4px 8px 4px;
  line-height: 4px;
  margin-right: 5px;
}
li.KeyboardShortcutRow {
  margin-bottom: 4px;
}
.mapstats .diff-stars {
  padding-top: 14px;
}
.card.bg-danger, .card.bg-secondary {
  .card-text > a {
    color: $body-color;
    text-decoration: underline;

    &:hover {
      color: #000;
    }
  }
}
.btn-check {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;

  &[disabled], &:disabled {
    + .btn {
      pointer-events: none;
      filter: none;
      opacity: 0.65;
    }
  }
}
.btn-outline-light {
  .btn-check:checked + &, .btn-check:active + &, &:active, &.active, &.dropdown-toggle.show {
    color: $black;
    background-color: $light;
    border-color: $light;

    &:focus {
      box-shadow: 0 0 0 0.25rem rgba($light, 0.5);
    }
  }
  .btn-check:focus + &, &:focus {
    box-shadow: 0 0 0 0.25rem rgba($light, 0.5);
  }
}
.nav-btn-group {
  .btn {
    flex: 1 1 0;
    margin-left: 0 !important;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
}
#beatsage-no + label {
  width: 45%;
}
#beatsage-yes + label {
  width: 54%;
  margin-left: 1%;
}

.user-form {
  width: 600px;

  hr {
    border-color: $gray-600;
  }
}
/* ... */

